# ZMachine

./: LICENSE  ZMachine.cabal
src/lib/: ZMachine.hs
src/lib/ZMachine/: ZTypes.hs
src/main/: Main.hs
src/test/: ZMachineSpec.hs
